--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.dev.rexhuang.zhiliao">
 
-    <!--<uses-permission android:name="android.permission.WAKE_LOCK"/>-->
-
     <application
         android:name=".ZhiliaoApplication"
         android:allowBackup="true"
@@ -14,11 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTask">
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="com.dev.rexhuang.zhiliao.musicservice.pendingintent" />
@@ -39,6 +38,10 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".detail.DetailActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
 
         <service
             android:name="com.dev.rexhuang.zhiliao_core.player.MusicPlayerService"
@@ -61,6 +64,7 @@
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
             </intent-filter>
         </receiver>
+
     </application>
 
 </manifest>
