--- a/zhiliao_core/build.gradle
+++ b/zhiliao_core/build.gradle
@@ -5,7 +5,6 @@ android {
     compileSdkVersion 28
 
 
-
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 28
@@ -41,30 +40,42 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
     //fragment
     api 'me.yokeyword:fragmentationx:1.0.1'
+
     //icon
     api 'com.mikepenz:iconics-core:3.2.5'
     api 'com.mikepenz:iconics-views:3.2.5'
     api 'com.mikepenz:fontawesome-typeface:5.3.1.1@aar'
+
     //ButterKnife
     api 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
+
     //Banner
     api 'com.youth.banner:banner:1.4.10'
     api 'com.github.wenjiangit:LoopBanner:1.2.0'
+
     //Glide
     api 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
     //Recyclerview
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.47'
+
     //Retrofit
     api 'com.squareup.retrofit2:retrofit:2.6.0'
     api 'com.squareup.retrofit2:converter-gson:2.6.0'
     api 'com.squareup.retrofit2:converter-scalars:2.6.0'
+
+    //OkHttp
+//    api 'com.squareup.okhttp3:logging-interceptor:3.5.0'
+
     //Loading
     api 'com.victor:lib:1.0.4'
     api 'com.wang.avi:library:2.1.3'
+
     //Log
     api 'com.orhanobut:logger:2.2.0'
 
@@ -85,4 +96,10 @@ dependencies {
 
     //圆形view
     api 'de.hdodenhof:circleimageview:2.2.0'
+
+    //EventBus
+    api 'org.greenrobot:eventbus:3.1.1'
+
+    //歌词View
+    api 'me.wcy:lrcview:2.1.0'
 }
