已调整项目结构，在设计歌单功能前保留副本

--- a/zhiliao_core/src/main/AndroidManifest.xml
+++ b/zhiliao_core/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
     <application>
         <service
-            android:name=".player2.zhiliaoplayback.download.ExoDownloadService"
+            android:name=".player2.playback.download.ExoDownloadService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.dev.rexhuang.zhiliao_core.downloadService.action.RESTART" />
