--- a/zhiliao_core/build.gradle
+++ b/zhiliao_core/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     api 'com.squareup.retrofit2:retrofit:2.6.0'
     api 'com.squareup.retrofit2:converter-gson:2.6.0'
     api 'com.squareup.retrofit2:converter-scalars:2.6.0'
+    api "com.squareup.retrofit2:adapter-rxjava2:2.6.0"
 
     //OkHttp
 //    api 'com.squareup.okhttp3:logging-interceptor:3.5.0'
@@ -104,4 +105,10 @@ dependencies {
 
     //歌词View
     api 'me.wcy:lrcview:2.1.0'
+
+    //RxJava and RxAndroid
+    api 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    api 'io.reactivex.rxjava2:rxjava:2.2.10'
+    //Runtime Permission
+    api 'com.github.tbruyelle:rxpermissions:0.10.2'
 }
