--- a/zhiliao_core/build.gradle
+++ b/zhiliao_core/build.gradle
@@ -109,6 +109,10 @@ dependencies {
     //RxJava and RxAndroid
     api 'io.reactivex.rxjava2:rxandroid:2.1.1'
     api 'io.reactivex.rxjava2:rxjava:2.2.10'
+
     //Runtime Permission
     api 'com.github.tbruyelle:rxpermissions:0.10.2'
+
+    //StatusBar
+    api 'com.gyf.immersionbar:immersionbar:3.0.0'
 }
